--- a/templates/destination.html
+++ b/templates/destination.html
@@ -8,22 +8,24 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- Place favicon.ico in the root directory -->
-      <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/logo.png">
+      <link rel="shortcut icon" type="image/x-icon" href="/static/assets/img/logo/logo.png">
 
       <!-- CSS here -->
-      <link rel="stylesheet" href="assets/css/bootstrap.css">
-      <link rel="stylesheet" href="assets/css/animate.css">
-      <link rel="stylesheet" href="assets/css/swiper-bundle.css">
-      <link rel="stylesheet" href="assets/css/splide.css">
-      <link rel="stylesheet" href="assets/css/slick.css">
-      <link rel="stylesheet" href="assets/css/nouislider.css">
-      <link rel="stylesheet" href="assets/css/datepicker.css">
-      <link rel="stylesheet" href="assets/css/magnific-popup.css">
-      <link rel="stylesheet" href="assets/css/font-awesome-pro.css">
-      <link rel="stylesheet" href="assets/css/flaticon_kleaso.css">
-      <link rel="stylesheet" href="assets/css/circularProgressBar.css">
-      <link rel="stylesheet" href="assets/css/spacing.css">
-      <link rel="stylesheet" href="assets/css/main.css">
+      <link rel="stylesheet" href="/static/assets/css/bootstrap.css">
+      <link rel="stylesheet" href="/static/assets/css/animate.css">
+      <link rel="stylesheet" href="/static/assets/css/swiper-bundle.css">
+      <link rel="stylesheet" href="/static/assets/css/splide.css">
+      <link rel="stylesheet" href="/static/assets/css/slick.css">
+      <link rel="stylesheet" href="/static/assets/css/nouislider.css">
+      <link rel="stylesheet" href="/static/assets/css/datepicker.css">
+      <link rel="stylesheet" href="/static/assets/css/magnific-popup.css">
+      <link rel="stylesheet" href="/static/assets/css/font-awesome-pro.css">
+      <link rel="stylesheet" href="/static/assets/css/flaticon_kleaso.css">
+      <link rel="stylesheet" href="/static/assets/css/circularProgressBar.css">
+      <link rel="stylesheet" href="/static/assets/css/spacing.css">
+      <link rel="stylesheet" href="/static/assets/css/main.css">
+      <link rel="stylesheet" href="/static/assets/css/food.css">
+
    </head>
    <body>
       <!--[if lte IE 9]>
@@ -87,15 +89,15 @@
                <div class="tp-header-color"></div>
                <div class="tp-header-space p-relative z-index-1">
                   <div class="tp-header-shape d-none d-xl-block">
-                     <img class="shape-1" src="assets/img/testimonial/shpe-1.png" alt="">
-                     <img class="shape-2" src="assets/img/testimonial/shpe-2.png" alt="">
+                     <img class="shape-1" src="/static/assets/img/testimonial/shpe-1.png" alt="">
+                     <img class="shape-2" src="/static/assets/img/testimonial/shpe-2.png" alt="">
                   </div>
                   <div class="container-fluid">
                      <div class="row align-items-center">
                         <div class="col-6 col-lg-6 col-xl-2">
                            <div class="tp-header-logo tp-header-logo-border">
                               <a href="index.html">
-                                 <img src="assets/img/logo/logo.png" alt="">
+                                 <img src="/static/assets/img/logo/logo.png" alt="">
                               </a>
                            </div>
                         </div>
@@ -105,16 +107,13 @@
                                  <nav id="tp-mobile-menu">
                                     <ul>
                                        <li class="">
-                                          <a href="index.html">Home</a>
+                                          <a href="/">Home</a>
                                           
                                        </li>
                                        <li> 
-                                          <a href="about.html">About</a>
+                                          <a href="/about">About</a>
                                        </li>
-                                       <li class="">
-                                          <a href="destination.html">Destination</a>
-                                       </li>
-                                       <li class="has-dropdown"> <a href="index.html">Food</a>
+                                       <li class="has-dropdown"> <a href="/">Destination</a>
                                           <ul class="submenu">
                                              <li><a href="bali_food.html">Bali</a></li>
                                              <li><a href="raja_ampat_food.html">Raja Ampat</a></li>
@@ -176,7 +175,7 @@
             <div class="tp-side-info">
                <div class="tp-side-logo">
                   <a href="index.html">
-                     <img src="assets/img/logo/logo.png" alt="logo">
+                     <img src="/static/assets/img/logo/logo.png" alt="logo">
                   </a>
                </div>
                <div class="tp-side-close">
@@ -218,14 +217,14 @@
 
       <main>
          <!-- about breadcrumb area start -->
-         <section class="breadcrumb__area breadcrumb-style pt-130 pb-115 p-relative z-index-1" data-background="assets/img/breadcrumb/breadcrumb-bg-2.jpg">
+         <section class="breadcrumb__area breadcrumb-style pt-130 pb-115 p-relative z-index-1" data-background="/static/assets/img/breadcrumb/breadcrumb-bg-2.jpg">
             <div class="breadcrumb__bg-overlay m-img"></div>
                <div class="breadcrumb-shape d-none d-lg-block">
                   <div class="shape-1">
-                     <img src="assets/img/breadcrumb/breadcrumb-shape.png" alt="">
+                     <img src="/static/assets/img/breadcrumb/breadcrumb-shape.png" alt="">
                   </div>
                   <div class="shape-2">
-                     <img src="assets/img/breadcrumb/breadcrumb-shape-2.png" alt="">
+                     <img src="/static/assets/img/breadcrumb/breadcrumb-shape-2.png" alt="">
                   </div>
                </div>
             <div class="container">
