--- a/templates/destination/palembang/jembatan_ampera.html
+++ b/templates/destination/palembang/jembatan_ampera.html
@@ -135,7 +135,7 @@
                                        <li><a href="ntt_statistic.html">NTT</a></li>
                                     </ul>
                                     </li>
-                                    <li> <a href="/contact">Contact</a></li>
+                                    <li> <a href="contact.html">Contact</a></li>
                                  </ul>
                               </nav>
                            </div>
@@ -164,72 +164,72 @@
       </header>
    <!-- header area end -->
 
-   <!-- mobile menu style start -->
-      <div class="tp-offcanvas-area fix">
-      <div class="tp-side-info">
-         <div class="tp-side-logo">
-            <a href="index.html">
-               <img src="/static/assets/img/logo/logo.png" alt="logo">
-            </a>
-         </div>
-         <div class="tp-side-close">
-            <button> <i class="fa-thin fa-xmark"></i></button>
-         </div>
-         <div class="tp-mobile-menu-pos"></div>
-         <div class="tp-side-content p-relative">
-            <div class="tp-sidebar__contact">
-               <h4 class="tp-sidebar-title">Contact Info</h4>
-               <ul>
-                  <li class="d-flex align-items-center">
-                     <div class="tp-sidebar__contact-text">
-                        <a target="_blank" href="https://www.google.com/maps/@-6.3008695,106.9101335,3a,75y,343.57h,66.98t/data=!3m6!1e1!3m4!1s6WqztY0bvgSZSK8E_nEEQg!2e0!7i16384!8i8192"><i class="fal fa-map-marker-alt"></i> Lubang Buaya, Jakarta, Indonesia.</a>
-                     </div>
-                  </li>
-                  <li class="d-flex align-items-center">
-                     <div class="tp-sidebar__contact-text">
-                        <a href="telto:0895326168335"><i class="far fa-phone"></i> 0895326168335</a>
-                     </div>
-                  </li>
-                  <li class="d-flex align-items-center">
-                     <div class="tp-sidebar__contact-text">
-                        <a href="mailto:dhonihanif@gmail.com"><i class="fal fa-envelope"></i> dhonihanif354@gmail.com</a>
-                     </div>
-                  </li>
-               </ul>
+         <!-- mobile menu style start -->
+         <div class="tp-offcanvas-area fix">
+            <div class="tp-side-info">
+               <div class="tp-side-logo">
+                  <a href="index.html">
+                     <img src="/static/assets/img/logo/logo.png" alt="logo">
+                  </a>
+               </div>
+               <div class="tp-side-close">
+                  <button> <i class="fa-thin fa-xmark"></i></button>
+               </div>
+               <div class="tp-mobile-menu-pos"></div>
+               <div class="tp-side-content p-relative">
+                  <div class="tp-sidebar__contact">
+                     <h4 class="tp-sidebar-title">Contact Info</h4>
+                     <ul>
+                        <li class="d-flex align-items-center">
+                           <div class="tp-sidebar__contact-text">
+                              <a target="_blank" href="https://www.google.com/maps/@-6.3008695,106.9101335,3a,75y,343.57h,66.98t/data=!3m6!1e1!3m4!1s6WqztY0bvgSZSK8E_nEEQg!2e0!7i16384!8i8192"><i class="fal fa-map-marker-alt"></i> Lubang Buaya, Jakarta, Indonesia.</a>
+                           </div>
+                        </li>
+                        <li class="d-flex align-items-center">
+                           <div class="tp-sidebar__contact-text">
+                              <a href="telto:0895326168335"><i class="far fa-phone"></i> 0895326168335</a>
+                           </div>
+                        </li>
+                        <li class="d-flex align-items-center">
+                           <div class="tp-sidebar__contact-text">
+                              <a href="mailto:dhonihanif@gmail.com"><i class="fal fa-envelope"></i> dhonihanif354@gmail.com</a>
+                           </div>
+                        </li>
+                     </ul>
+                  </div>
+                  <div class="tp-sidebar-icons tp-btn-effect-blue">
+                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                     <a href="#"><i class="fa-brands fa-skype"></i></a>
+                     <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                  </div>
+               </div>
             </div>
-            <div class="tp-sidebar-icons tp-btn-effect-blue">
-               <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-               <a href="#"><i class="fa-brands fa-twitter"></i></a>
-               <a href="#"><i class="fa-brands fa-skype"></i></a>
-               <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            <div class="offcanvas-overlay"></div>
             </div>
-         </div>
-      </div>
-      <div class="offcanvas-overlay"></div>
-      </div>
-   <!-- mobile menu style end -->
+         <!-- mobile menu style end -->
 
       <main>
          <!-- about breadcrumb area start -->
-            <section class="breadcrumb__area breadcrumb-style pt-130 pb-115 p-relative z-index-1" data-background="/static/assets/img/breadcrumb/breadcrumb-bg-1.jpg">
+            <section class="breadcrumb__area breadcrumb-style pt-130 pb-115 p-relative z-index-1" data-background="/static/assets/img/destination/palembang/jembatan_ampera.jpg">
                <div class="breadcrumb__bg-overlay m-img"></div>
                <div class="breadcrumb-shape  d-none d-lg-block">
-                  <div class="shape-1">
-                     <img src="/static/assets/img/breadcrumb/breadcrumb-shape.png" alt="">
-                  </div>
-                  <div class="shape-2">
-                     <img src="/static/assets/img/breadcrumb/breadcrumb-shape-2.png" alt="">
-                  </div>
+               <div class="shape-1">
+                  <img src="/static/assets/img/breadcrumb/breadcrumb-shape.png" alt="">
                </div>
+               <div class="shape-2">
+                  <img src="/static/assets/img/breadcrumb/breadcrumb-shape-2.png" alt="">
+               </div>
+            </div>
                <div class="container">
                   <div class="row justify-content-center">
                      <div class="col-xl-10">
                         <div class="breadcrumb__content text-center">
-                           <h3 class="breadcrumb__title">Contact us</h3>
+                           <h3 class="breadcrumb__title">Jembatan Ampera</h3>
                            <div class="breadcrumb__list breadcrumb__list-translate">
                               <span><a href="/">Home</a></span>
                               <span class="dvdr"><i class="fa-sharp fa-regular fa-minus"></i></span>
-                              <span>Contact</span>
+                              <span>Jembatan Ampera</span>
                            </div>
                         </div>
                      </div>
@@ -238,71 +238,56 @@
             </section>
          <!-- about breadcrumb area end -->
 
-         <!-- contact area start -->
-            <div class="tp-contact-area pt-120 pb-120">
+         <!-- project details area start -->
+            <section class="tp-project-details-area pt-120 pb-90">
                <div class="container">
                   <div class="row">
-                     <div class="col-lg-4">
-                        <div class="tp-contact-phone d-sm-flex justify-content-xl-end">
-                           <div class="tp-contact-icon">
-                              <a href="tel:008757845682"><i class="flaticon-telephone-call"></i></a>
-                           </div>
-                           <div class="contact-inner">
-                              <p>Phone:</p>
-                              <a href="tel:008757845682">(00) 895326168335</a>
-                           </div>
+                     <div class="col-lg-12 wow fadeInUp" data-wow-duration="1s"
+                     data-wow-delay=".3s">
+                        <div class="tp-project-details-thumb-1 mb-35">
+                           <img src="/static/assets/img/destination/palembang/jembatan_ampera.jpg" alt="">
+                        </div>
+                     </div>
+                  </div>
+                  <div class="row">
+                     <div class="col-lg-8">
+                        <div class="tp-project-details-text mb-50">
+                           <h3 class="tp-project-details-title">Jembatan Ampera</h3>
+                            <p>The Ampera Bridge, which has become a symbol of the city, is located in the middle of Palembang City, connecting the Seberang Ulu and Seberang Ilir areas which are separated by the Musi River.</p>
+                            <p>The Ampera Bridge was built in 1962 with construction costs taken from the Japanese war plunder. This also happened in the construction of the Jakarta Monas monument. Initially, this bridge was named Soekarno Bridge, the president of Indonesia at that time. Giving the name is considered as a form of respect for the services of President Soekarno at that time. However, President Soekarno was less pleased because he did not want to create certain individual tendencies. For this reason, the name of the bridge was then equated with the slogan of the Indonesian nation in 1960, namely the People's Suffering Mandate or abbreviated as Ampera.</p>
+                            <p>The Ampera Bridge, which has become a kind of city symbol, is located in the middle of Palembang City, connecting the Seberang Ulu and opposite Ilir regions separated by the Musi River.</p>
+
                         </div>
                      </div>
                      <div class="col-lg-4">
-                        <div class="tp-contact-mail d-sm-flex justify-content-xl-center">
-                           <div class="tp-contact-icon">
-                              <a href="mail:info@gmail.com"><i class="flaticon-mail"></i></a>
-                           </div>
-                           <div class="contact-inner">
-                              <p>E-mail:</p>
-                              <a href="mail:info@gmail.com">dhonihanif354@mail.com</a>
-                           </div>
+                        <div class="tp-project-details-list">
+                           <ul>
+                              <li><span>Destination</span> Jembatan Ampera</li>
+                              <li><span>Photo</span> Palembang.go.id</li>
+                              <li><span>Date</span> 09 Juli 2021</li>
+                              <li><span>Location</span> Palembang</li>
+                           </ul>
                         </div>
                      </div>
-                     <div class="col-lg-4">
-                        <div class="tp-contact-location d-sm-flex justify-content-xl-start">
-                           <div class="tp-contact-icon">
-                              <a href="https://www.google.com/maps/@-6.3008695,106.9101335,3a,75y,343.57h,66.98t/data=!3m6!1e1!3m4!1s6WqztY0bvgSZSK8E_nEEQg!2e0!7i16384!8i8192"><i class="flaticon-location"></i></a>
-                           </div>
-                           <div class="contact-inner">
-                              <p>Address:</p>
-                              <a target="_blank" href="https://www.google.com/maps/@-6.3008695,106.9101335,3a,75y,343.57h,66.98t/data=!3m6!1e1!3m4!1s6WqztY0bvgSZSK8E_nEEQg!2e0!7i16384!8i8192">Lubang Buaya, Jakarta, Indonesia.</a>
-                           </div>
-                        </div>
-                     </div>
+                  </div>
+                  
+               </div>
+            </section>
+         <!-- project details area end -->
+      
+      <!-- Place map area start -->
+      <div class="tp-contact-map-area">
+         <div class="container-fluid g-0">
+            <div class="row gx-0">
+               <div class="col-lg-12">
+                  <div class="tp-contact-map">
+                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3984.380351096384!2d104.76156786475691!3d-2.9917739978211157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e3b76034b851401%3A0x9b68f8209694f926!2sJemb.%20Ampera%2C%20Kota%20Palembang%2C%20Sumatera%20Selatan!5e0!3m2!1sid!2sid!4v1680713461767!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                   </div>
                </div>
             </div>
-         <!-- contact area end -->
-         
-
-         <!-- contact input area start -->
-            <section class="tp-contact-input pt-100">
-               <div class="container">
-                  
-                  </div>
-            </section>
-         <!-- contact input area end -->
-
-         <!-- contact map area start -->
-               <div class="tp-contact-map-area">
-                  <div class="container-fluid g-0">
-                     <div class="row gx-0">
-                        <div class="col-lg-12">
-                           <div class="tp-contact-map">
-                              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.7176668635875!2d106.90777231510366!3d-6.300780295439824!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69ed5495cc7247%3A0x9f4eb36e0a3fe47c!2sGg.%20Babah%2C%20Kec.%20Cipayung%2C%20Kota%20Jakarta%20Timur%2C%20Daerah%20Khusus%20Ibukota%20Jakarta%2013890!5e0!3m2!1sid!2sid!4v1680366000001!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-         <!-- contact map area end -->
-
+         </div>
+      </div>
+<!-- Place map area end -->
       </main>
 
       <!-- footer area start -->
