--- a/templates/destination/raja_ampat/salawati.html
+++ b/templates/destination/raja_ampat/salawati.html
@@ -135,7 +135,7 @@
                                        <li><a href="ntt_statistic.html">NTT</a></li>
                                     </ul>
                                     </li>
-                                    <li> <a href="/contact">Contact</a></li>
+                                    <li> <a href="contact.html">Contact</a></li>
                                  </ul>
                               </nav>
                            </div>
@@ -164,72 +164,72 @@
       </header>
    <!-- header area end -->
 
-   <!-- mobile menu style start -->
-      <div class="tp-offcanvas-area fix">
-      <div class="tp-side-info">
-         <div class="tp-side-logo">
-            <a href="index.html">
-               <img src="/static/assets/img/logo/logo.png" alt="logo">
-            </a>
-         </div>
-         <div class="tp-side-close">
-            <button> <i class="fa-thin fa-xmark"></i></button>
-         </div>
-         <div class="tp-mobile-menu-pos"></div>
-         <div class="tp-side-content p-relative">
-            <div class="tp-sidebar__contact">
-               <h4 class="tp-sidebar-title">Contact Info</h4>
-               <ul>
-                  <li class="d-flex align-items-center">
-                     <div class="tp-sidebar__contact-text">
-                        <a target="_blank" href="https://www.google.com/maps/@-6.3008695,106.9101335,3a,75y,343.57h,66.98t/data=!3m6!1e1!3m4!1s6WqztY0bvgSZSK8E_nEEQg!2e0!7i16384!8i8192"><i class="fal fa-map-marker-alt"></i> Lubang Buaya, Jakarta, Indonesia.</a>
-                     </div>
-                  </li>
-                  <li class="d-flex align-items-center">
-                     <div class="tp-sidebar__contact-text">
-                        <a href="telto:0895326168335"><i class="far fa-phone"></i> 0895326168335</a>
-                     </div>
-                  </li>
-                  <li class="d-flex align-items-center">
-                     <div class="tp-sidebar__contact-text">
-                        <a href="mailto:dhonihanif@gmail.com"><i class="fal fa-envelope"></i> dhonihanif354@gmail.com</a>
-                     </div>
-                  </li>
-               </ul>
+         <!-- mobile menu style start -->
+         <div class="tp-offcanvas-area fix">
+            <div class="tp-side-info">
+               <div class="tp-side-logo">
+                  <a href="index.html">
+                     <img src="/static/assets/img/logo/logo.png" alt="logo">
+                  </a>
+               </div>
+               <div class="tp-side-close">
+                  <button> <i class="fa-thin fa-xmark"></i></button>
+               </div>
+               <div class="tp-mobile-menu-pos"></div>
+               <div class="tp-side-content p-relative">
+                  <div class="tp-sidebar__contact">
+                     <h4 class="tp-sidebar-title">Contact Info</h4>
+                     <ul>
+                        <li class="d-flex align-items-center">
+                           <div class="tp-sidebar__contact-text">
+                              <a target="_blank" href="https://www.google.com/maps/@-6.3008695,106.9101335,3a,75y,343.57h,66.98t/data=!3m6!1e1!3m4!1s6WqztY0bvgSZSK8E_nEEQg!2e0!7i16384!8i8192"><i class="fal fa-map-marker-alt"></i> Lubang Buaya, Jakarta, Indonesia.</a>
+                           </div>
+                        </li>
+                        <li class="d-flex align-items-center">
+                           <div class="tp-sidebar__contact-text">
+                              <a href="telto:0895326168335"><i class="far fa-phone"></i> 0895326168335</a>
+                           </div>
+                        </li>
+                        <li class="d-flex align-items-center">
+                           <div class="tp-sidebar__contact-text">
+                              <a href="mailto:dhonihanif@gmail.com"><i class="fal fa-envelope"></i> dhonihanif354@gmail.com</a>
+                           </div>
+                        </li>
+                     </ul>
+                  </div>
+                  <div class="tp-sidebar-icons tp-btn-effect-blue">
+                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                     <a href="#"><i class="fa-brands fa-skype"></i></a>
+                     <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                  </div>
+               </div>
             </div>
-            <div class="tp-sidebar-icons tp-btn-effect-blue">
-               <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-               <a href="#"><i class="fa-brands fa-twitter"></i></a>
-               <a href="#"><i class="fa-brands fa-skype"></i></a>
-               <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            <div class="offcanvas-overlay"></div>
             </div>
-         </div>
-      </div>
-      <div class="offcanvas-overlay"></div>
-      </div>
-   <!-- mobile menu style end -->
+         <!-- mobile menu style end -->
 
       <main>
          <!-- about breadcrumb area start -->
-            <section class="breadcrumb__area breadcrumb-style pt-130 pb-115 p-relative z-index-1" data-background="/static/assets/img/breadcrumb/breadcrumb-bg-1.jpg">
+            <section class="breadcrumb__area breadcrumb-style pt-130 pb-115 p-relative z-index-1" data-background="/static/assets/img/destination/raja_ampat/salawati.png">
                <div class="breadcrumb__bg-overlay m-img"></div>
                <div class="breadcrumb-shape  d-none d-lg-block">
-                  <div class="shape-1">
-                     <img src="/static/assets/img/breadcrumb/breadcrumb-shape.png" alt="">
-                  </div>
-                  <div class="shape-2">
-                     <img src="/static/assets/img/breadcrumb/breadcrumb-shape-2.png" alt="">
-                  </div>
+               <div class="shape-1">
+                  <img src="/static/assets/img/breadcrumb/breadcrumb-shape.png" alt="">
                </div>
+               <div class="shape-2">
+                  <img src="/static/assets/img/breadcrumb/breadcrumb-shape-2.png" alt="">
+               </div>
+            </div>
                <div class="container">
                   <div class="row justify-content-center">
                      <div class="col-xl-10">
                         <div class="breadcrumb__content text-center">
-                           <h3 class="breadcrumb__title">Contact us</h3>
+                           <h3 class="breadcrumb__title">Salawati</h3>
                            <div class="breadcrumb__list breadcrumb__list-translate">
-                              <span><a href="/">Home</a></span>
+                              <span><a href="index.html">Home</a></span>
                               <span class="dvdr"><i class="fa-sharp fa-regular fa-minus"></i></span>
-                              <span>Contact</span>
+                              <span>Salawati</span>
                            </div>
                         </div>
                      </div>
@@ -238,71 +238,56 @@
             </section>
          <!-- about breadcrumb area end -->
 
-         <!-- contact area start -->
-            <div class="tp-contact-area pt-120 pb-120">
+         <!-- project details area start -->
+            <section class="tp-project-details-area pt-120 pb-90">
                <div class="container">
                   <div class="row">
-                     <div class="col-lg-4">
-                        <div class="tp-contact-phone d-sm-flex justify-content-xl-end">
-                           <div class="tp-contact-icon">
-                              <a href="tel:008757845682"><i class="flaticon-telephone-call"></i></a>
-                           </div>
-                           <div class="contact-inner">
-                              <p>Phone:</p>
-                              <a href="tel:008757845682">(00) 895326168335</a>
-                           </div>
+                     <div class="col-lg-12 wow fadeInUp" data-wow-duration="1s"
+                     data-wow-delay=".3s">
+                        <div class="tp-project-details-thumb-1 mb-35">
+                           <img src="/static/assets/img/destination/raja_ampat/salawati.png" alt="">
+                        </div>
+                     </div>
+                  </div>
+                  <div class="row">
+                     <div class="col-lg-8">
+                        <div class="tp-project-details-text mb-50">
+                           <h3 class="tp-project-details-title">Salawati</h3>
+                            <p>Raja Ampat Islands are indeed famous for their beautiful and unspoiled nature. There are several islands with beach views and tourism potential that are very interesting to visit, one of which is Salawati Island . Salawati Island is one of the four main islands in the Raja Ampat Islands, West Papua . The area is about 1.623 square km. Nearly three-quarters of Salawati Island is dense sago forest. The sago trees here grow wild without anyone planting them.</p>
+                            <p>This is the location where the new species of Salawati rainbow fish was found . This species was discovered by a joint research team from Indonesia and France. The Salawati rainbow fish or its Latin name Melanotaenia Salawati is the 19th species discovered through exploration of the biodiversity of the Papua Bird's Head ecoregion. The Salawati rainbow fish was found in the Doctor river, right at the position of the western cornel of the island or about 64 km west of the city of Sorong, West Papua .</p>
+                            <p>The beauty of this fish is because of its colorful skin color. Covered in rows of purple on the dorsal side to mauve purple at the base of the tail. The gill covers are sprinkled with splashes of gold and dots of castor leaf green. From the abdominal fins to the base of the tail fin, bright violet is scattered, overtaken by blue dots. In addition, a dark blue patch appeared to expand on the back of its body. This finding seems to once again confirm how rich the diversity of flora and fauna is in Papua , especially Raja Ampat .</p>
+                            <p>You can also see World War II bunkers made by the Dutch and Japanese, the Wor dance and waterfalls. Besides being beautiful and its nature is so unique, its local wisdom is also a special attraction. To reach Salawati Island , you have to get off at the Sorong city airport. The crossing from the city of Sorong to Salawati takes about 2 hours of travel, passing through beautiful and uninhabited small islands.</p>
                         </div>
                      </div>
                      <div class="col-lg-4">
-                        <div class="tp-contact-mail d-sm-flex justify-content-xl-center">
-                           <div class="tp-contact-icon">
-                              <a href="mail:info@gmail.com"><i class="flaticon-mail"></i></a>
-                           </div>
-                           <div class="contact-inner">
-                              <p>E-mail:</p>
-                              <a href="mail:info@gmail.com">dhonihanif354@mail.com</a>
-                           </div>
+                        <div class="tp-project-details-list">
+                           <ul>
+                              <li><span>Destination</span> Salawati</li>
+                              <li><span>Photo</span> KSM Tour</li>
+                              <li><span>Date</span> 10 April 2018</li>
+                              <li><span>Location</span> Raja Ampat</li>
+                           </ul>
                         </div>
                      </div>
-                     <div class="col-lg-4">
-                        <div class="tp-contact-location d-sm-flex justify-content-xl-start">
-                           <div class="tp-contact-icon">
-                              <a href="https://www.google.com/maps/@-6.3008695,106.9101335,3a,75y,343.57h,66.98t/data=!3m6!1e1!3m4!1s6WqztY0bvgSZSK8E_nEEQg!2e0!7i16384!8i8192"><i class="flaticon-location"></i></a>
-                           </div>
-                           <div class="contact-inner">
-                              <p>Address:</p>
-                              <a target="_blank" href="https://www.google.com/maps/@-6.3008695,106.9101335,3a,75y,343.57h,66.98t/data=!3m6!1e1!3m4!1s6WqztY0bvgSZSK8E_nEEQg!2e0!7i16384!8i8192">Lubang Buaya, Jakarta, Indonesia.</a>
-                           </div>
-                        </div>
-                     </div>
+                  </div>
+                  
+               </div>
+            </section>
+         <!-- project details area end -->
+
+         <!-- Place map area start -->
+      <div class="tp-contact-map-area">
+         <div class="container-fluid g-0">
+            <div class="row gx-0">
+               <div class="col-lg-12">
+                  <div class="tp-contact-map">
+                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31912.484769061204!2d130.84915706714557!3d-1.1166665978694374!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2d5c3925e97315d7%3A0x3403a680ccd12b11!2sPulau%20Salawati!5e0!3m2!1sid!2sid!4v1680713083782!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                   </div>
                </div>
             </div>
-         <!-- contact area end -->
-         
-
-         <!-- contact input area start -->
-            <section class="tp-contact-input pt-100">
-               <div class="container">
-                  
-                  </div>
-            </section>
-         <!-- contact input area end -->
-
-         <!-- contact map area start -->
-               <div class="tp-contact-map-area">
-                  <div class="container-fluid g-0">
-                     <div class="row gx-0">
-                        <div class="col-lg-12">
-                           <div class="tp-contact-map">
-                              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.7176668635875!2d106.90777231510366!3d-6.300780295439824!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69ed5495cc7247%3A0x9f4eb36e0a3fe47c!2sGg.%20Babah%2C%20Kec.%20Cipayung%2C%20Kota%20Jakarta%20Timur%2C%20Daerah%20Khusus%20Ibukota%20Jakarta%2013890!5e0!3m2!1sid!2sid!4v1680366000001!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-         <!-- contact map area end -->
-
+         </div>
+      </div>
+<!-- Place map area end --> 
       </main>
 
       <!-- footer area start -->
