--- a/templates/statistics/bali.html
+++ b/templates/statistics/bali.html
@@ -135,7 +135,7 @@
                                        <li><a href="ntt_statistic.html">NTT</a></li>
                                     </ul>
                                     </li>
-                                    <li> <a href="/contact">Contact</a></li>
+                                    <li> <a href="contact.html">Contact</a></li>
                                  </ul>
                               </nav>
                            </div>
@@ -164,72 +164,72 @@
       </header>
    <!-- header area end -->
 
-   <!-- mobile menu style start -->
-      <div class="tp-offcanvas-area fix">
-      <div class="tp-side-info">
-         <div class="tp-side-logo">
-            <a href="index.html">
-               <img src="/static/assets/img/logo/logo.png" alt="logo">
-            </a>
-         </div>
-         <div class="tp-side-close">
-            <button> <i class="fa-thin fa-xmark"></i></button>
-         </div>
-         <div class="tp-mobile-menu-pos"></div>
-         <div class="tp-side-content p-relative">
-            <div class="tp-sidebar__contact">
-               <h4 class="tp-sidebar-title">Contact Info</h4>
-               <ul>
-                  <li class="d-flex align-items-center">
-                     <div class="tp-sidebar__contact-text">
-                        <a target="_blank" href="https://www.google.com/maps/@-6.3008695,106.9101335,3a,75y,343.57h,66.98t/data=!3m6!1e1!3m4!1s6WqztY0bvgSZSK8E_nEEQg!2e0!7i16384!8i8192"><i class="fal fa-map-marker-alt"></i> Lubang Buaya, Jakarta, Indonesia.</a>
-                     </div>
-                  </li>
-                  <li class="d-flex align-items-center">
-                     <div class="tp-sidebar__contact-text">
-                        <a href="telto:0895326168335"><i class="far fa-phone"></i> 0895326168335</a>
-                     </div>
-                  </li>
-                  <li class="d-flex align-items-center">
-                     <div class="tp-sidebar__contact-text">
-                        <a href="mailto:dhonihanif@gmail.com"><i class="fal fa-envelope"></i> dhonihanif354@gmail.com</a>
-                     </div>
-                  </li>
-               </ul>
-            </div>
-            <div class="tp-sidebar-icons tp-btn-effect-blue">
-               <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-               <a href="#"><i class="fa-brands fa-twitter"></i></a>
-               <a href="#"><i class="fa-brands fa-skype"></i></a>
-               <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-            </div>
-         </div>
-      </div>
-      <div class="offcanvas-overlay"></div>
-      </div>
-   <!-- mobile menu style end -->
-
-      <main>
-         <!-- about breadcrumb area start -->
-            <section class="breadcrumb__area breadcrumb-style pt-130 pb-115 p-relative z-index-1" data-background="/static/assets/img/breadcrumb/breadcrumb-bg-1.jpg">
-               <div class="breadcrumb__bg-overlay m-img"></div>
-               <div class="breadcrumb-shape  d-none d-lg-block">
-                  <div class="shape-1">
-                     <img src="/static/assets/img/breadcrumb/breadcrumb-shape.png" alt="">
+         <!-- mobile menu style start -->
+         <div class="tp-offcanvas-area fix">
+            <div class="tp-side-info">
+               <div class="tp-side-logo">
+                  <a href="index.html">
+                     <img src="/static/assets/img/logo/logo.png" alt="logo">
+                  </a>
+               </div>
+               <div class="tp-side-close">
+                  <button> <i class="fa-thin fa-xmark"></i></button>
+               </div>
+               <div class="tp-mobile-menu-pos"></div>
+               <div class="tp-side-content p-relative">
+                  <div class="tp-sidebar__contact">
+                     <h4 class="tp-sidebar-title">Contact Info</h4>
+                     <ul>
+                        <li class="d-flex align-items-center">
+                           <div class="tp-sidebar__contact-text">
+                              <a target="_blank" href="https://www.google.com/maps/@-6.3008695,106.9101335,3a,75y,343.57h,66.98t/data=!3m6!1e1!3m4!1s6WqztY0bvgSZSK8E_nEEQg!2e0!7i16384!8i8192"><i class="fal fa-map-marker-alt"></i> Lubang Buaya, Jakarta, Indonesia.</a>
+                           </div>
+                        </li>
+                        <li class="d-flex align-items-center">
+                           <div class="tp-sidebar__contact-text">
+                              <a href="telto:0895326168335"><i class="far fa-phone"></i> 0895326168335</a>
+                           </div>
+                        </li>
+                        <li class="d-flex align-items-center">
+                           <div class="tp-sidebar__contact-text">
+                              <a href="mailto:dhonihanif@gmail.com"><i class="fal fa-envelope"></i> dhonihanif354@gmail.com</a>
+                           </div>
+                        </li>
+                     </ul>
                   </div>
-                  <div class="shape-2">
-                     <img src="/static/assets/img/breadcrumb/breadcrumb-shape-2.png" alt="">
+                  <div class="tp-sidebar-icons tp-btn-effect-blue">
+                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                     <a href="#"><i class="fa-brands fa-skype"></i></a>
+                     <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                   </div>
                </div>
+            </div>
+            <div class="offcanvas-overlay"></div>
+            </div>
+         <!-- mobile menu style end -->
+   
+      <main>
+         <!-- about breadcrumb area start -->
+            <section class="breadcrumb__area breadcrumb-style pt-130 pb-115 p-relative z-index-1" data-background="/static/assets/img/destination/bali/mount_batur.png">
+               <div class="breadcrumb__bg-overlay m-img"></div>
+               <div class="breadcrumb-shape  d-none d-lg-block">
+               <div class="shape-1">
+                  <img src="/static/assets/img/breadcrumb/breadcrumb-shape.png" alt="">
+               </div>
+               <div class="shape-2">
+                  <img src="/static/assets/img/breadcrumb/breadcrumb-shape-2.png" alt="">
+               </div>
+            </div>
                <div class="container">
                   <div class="row justify-content-center">
                      <div class="col-xl-10">
                         <div class="breadcrumb__content text-center">
-                           <h3 class="breadcrumb__title">Contact us</h3>
+                           <h3 class="breadcrumb__title">Mount Batur</h3>
                            <div class="breadcrumb__list breadcrumb__list-translate">
                               <span><a href="/">Home</a></span>
                               <span class="dvdr"><i class="fa-sharp fa-regular fa-minus"></i></span>
-                              <span>Contact</span>
+                              <span>Mount Batur</span>
                            </div>
                         </div>
                      </div>
@@ -238,71 +238,42 @@
             </section>
          <!-- about breadcrumb area end -->
 
-         <!-- contact area start -->
-            <div class="tp-contact-area pt-120 pb-120">
+         <!-- project details area start -->
+            <section class="tp-project-details-area pt-120 pb-90">
                <div class="container">
                   <div class="row">
-                     <div class="col-lg-4">
-                        <div class="tp-contact-phone d-sm-flex justify-content-xl-end">
-                           <div class="tp-contact-icon">
-                              <a href="tel:008757845682"><i class="flaticon-telephone-call"></i></a>
-                           </div>
-                           <div class="contact-inner">
-                              <p>Phone:</p>
-                              <a href="tel:008757845682">(00) 895326168335</a>
-                           </div>
-                        </div>
-                     </div>
-                     <div class="col-lg-4">
-                        <div class="tp-contact-mail d-sm-flex justify-content-xl-center">
-                           <div class="tp-contact-icon">
-                              <a href="mail:info@gmail.com"><i class="flaticon-mail"></i></a>
-                           </div>
-                           <div class="contact-inner">
-                              <p>E-mail:</p>
-                              <a href="mail:info@gmail.com">dhonihanif354@mail.com</a>
-                           </div>
-                        </div>
-                     </div>
-                     <div class="col-lg-4">
-                        <div class="tp-contact-location d-sm-flex justify-content-xl-start">
-                           <div class="tp-contact-icon">
-                              <a href="https://www.google.com/maps/@-6.3008695,106.9101335,3a,75y,343.57h,66.98t/data=!3m6!1e1!3m4!1s6WqztY0bvgSZSK8E_nEEQg!2e0!7i16384!8i8192"><i class="flaticon-location"></i></a>
-                           </div>
-                           <div class="contact-inner">
-                              <p>Address:</p>
-                              <a target="_blank" href="https://www.google.com/maps/@-6.3008695,106.9101335,3a,75y,343.57h,66.98t/data=!3m6!1e1!3m4!1s6WqztY0bvgSZSK8E_nEEQg!2e0!7i16384!8i8192">Lubang Buaya, Jakarta, Indonesia.</a>
-                           </div>
+                     <div class="col-lg-12 wow fadeInUp" data-wow-duration="1s"
+                     data-wow-delay=".3s">
+                        <div class="tp-project-details-thumb-1 mb-35">
+                            <canvas id="myChart"></canvas>
                         </div>
                      </div>
                   </div>
-               </div>
-            </div>
-         <!-- contact area end -->
-         
-
-         <!-- contact input area start -->
-            <section class="tp-contact-input pt-100">
-               <div class="container">
+                  <div class="row">
+                     <div class="col-lg-8">
+                        <div class="tp-project-details-text mb-50">
+                           <h3 class="tp-project-details-title">Mount Batur</h3>
+                            <p>Every day in Bali's predawn darkness, hundreds of visitors begin the trek up the 1,700-meter summit of Mount Batur. Once at the top, they watch the sun rise above the lush mosaic of mist-shrouded mountains and the caldera far below. If you're looking for romantic things to do in Bali for couples, this should be top on your list.</p>
+                            <p>This sacred active volcano lies in Kintamani District in Bali's central highlands, about an hour's drive from Ubud. The hike, along well-marked trails, is relatively easy and usually takes about two to three hours. Guided treks typically include a picnic breakfast, with eggs cooked by the steam from the active volcano. On a clear day, the views are spectacular, stretching all the way across the Batur caldera; the surrounding mountain range; and beautiful Lake Batur, the island's main source of irrigation water.</p>
+                            <p>Sturdy hiking shoes are essential, and it's advisable to wear layers, as the temperature can be cool before sunrise.</p>
+                        </div>
+                     </div>
+                     <div class="col-lg-4">
+                        <div class="tp-project-details-list">
+                           <ul>
+                              <li><span>Destination</span> Mount Batur</li>
+                              <li><span>Photo</span> Karen Hastings</li>
+                              <li><span>Date</span> 30 March 2022</li>
+                              <li><span>Location</span> Bali</li>
+                           </ul>
+                        </div>
+                     </div>
+                  </div>
                   
-                  </div>
-            </section>
-         <!-- contact input area end -->
-
-         <!-- contact map area start -->
-               <div class="tp-contact-map-area">
-                  <div class="container-fluid g-0">
-                     <div class="row gx-0">
-                        <div class="col-lg-12">
-                           <div class="tp-contact-map">
-                              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.7176668635875!2d106.90777231510366!3d-6.300780295439824!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69ed5495cc7247%3A0x9f4eb36e0a3fe47c!2sGg.%20Babah%2C%20Kec.%20Cipayung%2C%20Kota%20Jakarta%20Timur%2C%20Daerah%20Khusus%20Ibukota%20Jakarta%2013890!5e0!3m2!1sid!2sid!4v1680366000001!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
                </div>
-         <!-- contact map area end -->
-
+            </section>
+         <!-- project details area end -->
+        
       </main>
 
       <!-- footer area start -->
@@ -395,26 +366,52 @@
 
 
 
-   <!-- JS here -->
-   <script src="/static/assets/js/vendor/jquery.js"></script>
-   <script src="/static/assets/js/vendor/waypoints.js"></script>
-   <script src="/static/assets/js/bootstrap-bundle.js"></script>
-   <script src="/static/assets/js/meanmenu.js"></script>
-   <script src="/static/assets/js/swiper-bundle.js"></script>
-   <script src="/static/assets/js/splide.js"></script>
-   <script src="/static/assets/js/slick.min.js"></script>
-   <script src="/static/assets/js/nouislider.js"></script>
-   <script src="/static/assets/js/magnific-popup.js"></script>
-   <script src="/static/assets/js/nice-select.js"></script>
-   <script src="/static/assets/js/wow.js"></script>
-   <script src="/static/assets/js/datepicker.js"></script>
-   <script src="/static/assets/js/isotope-pkgd.js"></script>
-   <script src="/static/assets/js/imagesloaded-pkgd.js"></script>
-   <script src="/static/assets/js/jquery.appear.js"></script>
-   <script src="/static/assets/js/jquery.knob.js"></script>
-   <script src="/static/assets/js/circularProgressBar.min.js"></script>
-   <script src="/static/assets/js/purecounter.js"></script>
-   <script src="/static/assets/js/ajax-form.js"></script>
-   <script src="/static/assets/js/main.js"></script>
-</body>
+      <!-- JS here -->
+      <script src="/static/assets/js/vendor/jquery.js"></script>
+      <script src="/static/assets/js/vendor/waypoints.js"></script>
+      <script src="/static/assets/js/bootstrap-bundle.js"></script>
+      <script src="/static/assets/js/meanmenu.js"></script>
+      <script src="/static/assets/js/swiper-bundle.js"></script>
+      <script src="/static/assets/js/splide.js"></script>
+      <script src="/static/assets/js/slick.min.js"></script>
+      <script src="/static/assets/js/nouislider.js"></script>
+      <script src="/static/assets/js/magnific-popup.js"></script>
+      <script src="/static/assets/js/nice-select.js"></script>
+      <script src="/static/assets/js/wow.js"></script>
+      <script src="/static/assets/js/datepicker.js"></script>
+      <script src="/static/assets/js/isotope-pkgd.js"></script>
+      <script src="/static/assets/js/imagesloaded-pkgd.js"></script>
+      <script src="/static/assets/js/jquery.appear.js"></script>
+      <script src="/static/assets/js/jquery.knob.js"></script>
+      <script src="/static/assets/js/circularProgressBar.min.js"></script>
+      <script src="/static/assets/js/purecounter.js"></script>
+      <script src="/static/assets/js/ajax-form.js"></script>
+      <script src="/static/assets/js/main.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+      <script>
+        var ctx = document.getElementById('myChart').getContext('2d');
+        var myChart = new Chart(ctx, {
+            type: 'line',
+            data: {
+                labels: JSON.parse('{{ tahun|tojson|safe }}'),
+        datasets: [{
+            label: 'Data',
+            data: JSON.parse('{{ data|safe }}'),
+            backgroundColor: 'rgba(54, 162, 235, 0.2)',
+            borderColor: 'rgba(54, 162, 235, 1)',
+            borderWidth: 1
+                }]
+            },
+        options: {
+            scales: {
+                yAxes: [{
+                    ticks: {
+                        beginAtZero: true
+                    }
+                }]
+            }
+        }
+        });
+    </script>
+   </body>
 </html>
