--- a/templates/index.html
+++ b/templates/index.html
@@ -133,12 +133,12 @@
                                        <li class="has-dropdown"><a href="blog.html">Statistics</a>
                                        <ul class="submenu">
                                           <li><a href="/statistics/bali">Bali</a></li>
-                                          <li><a href="raja_ampat_statistic.html">Raja Ampat</a></li>
-                                          <li><a href="yogyakarta_statistic.html">Yogyakarta</a></li>
-                                          <li><a href="palembang_statistic.html">Palembang</a></li>
-                                          <li><a href="tanah_toraja_statistic.html">Tanah Toraja</a></li>
-                                          <li><a href="lombok_statistic.html">Lombok</a></li>
-                                          <li><a href="ntt_statistic.html">NTT</a></li>
+                                          <li><a href="/statistics/raja_ampat">Raja Ampat</a></li>
+                                          <li><a href="/statistics/yogyakarta">Yogyakarta</a></li>
+                                          <li><a href="/statistics/palembang">Palembang</a></li>
+                                          <li><a href="/statistics/tana_toraja">Tanah Toraja</a></li>
+                                          <li><a href="/statistics/lombok">Lombok</a></li>
+                                          <li><a href="/statistics/ntt">NTT</a></li>
                                        </ul>
                                        </li>
                                        <li> <a href="/contact">Contact</a></li>
@@ -152,7 +152,7 @@
                               <div class="tp-header-market mr-50 p-relative d-none d-xxl-block">
                                  </div>
                                  <div class="tp-header-btn p-relative d-none d-xl-block">
-                                    <a class="tp-btn" href="contact.html"><i class="fa-light fa-arrow-right"></i> Login</a>
+                                    <a class="tp-btn" href="/login"><i class="fa-light fa-arrow-right"></i> Login</a>
                                  </div>
                                  <div class="mobile-menu d-block d-xl-none text-end">
                                     <button class="tp-side-action tp-toogle hamburger-btn">
@@ -174,7 +174,7 @@
          <div class="tp-offcanvas-area fix">
          <div class="tp-side-info">
             <div class="tp-side-logo">
-               <a href="index.html">
+               <a href="/">
                   <img src="/static/assets/img/logo/logo.png" alt="logo">
                </a>
             </div>
