--- a/templates/statistics/lombok.html
+++ b/templates/statistics/lombok.html
@@ -211,7 +211,7 @@
    
       <main>
          <!-- about breadcrumb area start -->
-            <section class="breadcrumb__area breadcrumb-style pt-130 pb-115 p-relative z-index-1" data-background="/static/assets/img/destination/bali/mount_batur.png">
+            <section class="breadcrumb__area breadcrumb-style pt-130 pb-115 p-relative z-index-1" data-background="/static/assets/img/destination/lombok/mount_rinjani.png">
                <div class="breadcrumb__bg-overlay m-img"></div>
                <div class="breadcrumb-shape  d-none d-lg-block">
                <div class="shape-1">
@@ -225,11 +225,11 @@
                   <div class="row justify-content-center">
                      <div class="col-xl-10">
                         <div class="breadcrumb__content text-center">
-                           <h3 class="breadcrumb__title">Bali Statistics</h3>
+                           <h3 class="breadcrumb__title">Lombok Statistics</h3>
                            <div class="breadcrumb__list breadcrumb__list-translate">
                               <span><a href="/">Home</a></span>
                               <span class="dvdr"><i class="fa-sharp fa-regular fa-minus"></i></span>
-                              <span>Bali Statistics</span>
+                              <span>Lombok Statistics</span>
                            </div>
                         </div>
                      </div>
@@ -252,7 +252,7 @@
                   <div class="row">
                      <div class="col-lg-8">
                         <div class="tp-project-details-text mb-50">
-                           <h3 class="tp-project-details-title">Bali Statistics</h3>
+                           <h3 class="tp-project-details-title">Lombok Statistics</h3>
                             <p></p>
                         </div>
                         <div class="tp-project-details-list">
